# hobreirepository

./: .gitignore  README.md  pyproject.toml
.github/workflows/: actions.yml  python-app.yml  python11-tests.yml  python22-tests.yml
exam/: main.py  readme.md  test.py
init/: readme.md
laba1/: 1.ipynb  readme.md
laba2/: 2.ipynb  example.txt  readme.md
laba3/: 3.ipynb  readme.md
laba4/: laba4.ipynb  readme.md  updated_data.csv
sem2/lab1/: readme.md  task7.py  task7AI.py  task8.py
sem2/lab2/: app.py  readme.md  task2.py  test_app.py
sem2/lab3/: readme.md
zalik/: zalik.ipynb
