[project]
name = "hobreirepository"
version = "0.1.0"
description = ""
authors = [
    {name = "ahobrei",email = "ahobrei2021@itcollege.lviv.ua"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.12"
pytest = "^8.3.5"

